Add Yeoman WebApp build structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Ignore the distros
 /dist*/
+.tmp
+
+app/**/*.html
+app/css/
+
+endpoint.txt
 
 ##########################
 ##  __   __   __|  ___  ##
