--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "d3": "~3.5.3"
+    "d3": "~3.5.3",
+    "foundation": "zurb/bower-foundation",
+    "font-awesome": "~4.2.0"
   }
 }
