--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "grunt publish",
     "postinstall": "node_modules/.bin/bower install",
     "serve": "open http://localhost:9000 && grunt",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "echo \"Error: no watch specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -34,13 +33,13 @@
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-connect": "~0.9.0",
+    "grunt-text-replace": "~0.4.0",
     "grunt-wiredep": "~2.0.0",
     "grunt-usemin": "~3.0.0",
     "grunt-contrib-imagemin": "0.9.2",
     "grunt-newer": "~0.8.0",
     "load-grunt-tasks": "~1.0.0",
     "node-sass": "~1.2.3",
-    "yo": "~1.1.2",
-    "grunt-text-replace": "~0.4.0"
+    "yo": "~1.1.2"
   }
 }
