fix gitignore and package.json
Add more temp file types to gitignore
'npm run serve' only opens 1 browser window

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "grunt publish",
     "postinstall": "node_modules/.bin/bower install",
-    "serve": "open http://localhost:9000 && grunt",
+    "serve": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
