--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SPARQLverseD3",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Gallery of D3 demos running against SPARQLverse",
   "main": "index.html",
   "engines": {
@@ -40,6 +40,7 @@
     "grunt-newer": "~0.8.0",
     "load-grunt-tasks": "~1.0.0",
     "node-sass": "~1.2.3",
-    "yo": "~1.1.2"
+    "yo": "~1.1.2",
+    "grunt-jade-usemin": "~0.11.1"
   }
 }
